--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,7 +10,9 @@
 
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
         <activity android:name="MainActivity"
-                  android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:screenOrientation="landscape"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
